# RPG-LLM-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tech_docs_for_me.md
ai/: slime_ai.py
ai/datasets/: data.json
ai/models/: slime_weights.json
assets/: LICENSE FOR ASSETS
assets/custom/: knight-referens.xcf
assets/quests/: QUESTS_DOC.md  quests.json
scr/: HUD.cpp  HUD.h  animation.cpp  animation.h  chest.cpp  chest.h  main.cpp  player.cpp  player.h  quest.cpp  quest.h  slime.cpp  slime.h  world.cpp  world.h
scripts/: gen_spawns.py  run_slime_ai.sh
Лор/: Лор.md
